# mousewolf

./: .gitignore  pyproject.toml
docs/: Info.md  model.md
scripts/: analysis.py  build_dataset.py  fit_hmm.py  hmm.py  sanity_check.py
src/mousewolf/: io.py  paths.py
src/mousewolf/models/: hmm.py
